# bfs_mro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
src/bfs_mro/: __init__.py  core.py
tests/: test_bfs_mro.py
