[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bfs_mro"
version = "0.1.0"
description = "BFS-enhanced method lookup for Python classes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Alexander Shchukin", email = "446.54.53@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
