[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bfs_mro"
version = "0.1.0"
description = "BFS-enhanced method lookup for Python classes"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Alexander Shchukin", email = "446.54.53@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
